k8s/manifests/deployment.yaml
# This is a sample deployment manifest file for a simple web application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Portfolio
  labels:
    app: Portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Portfolio
  template:
    metadata:
      labels:
        app: Portfolio
    spec:
      containers:
      - name: Portfolio
        image: <docker-user-name>/Portfolio
        ports:
        - containerPort: 8080
