k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: Portfolio
  labels:
    app: Portfolio
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: Portfolio
  type: ClusterIP
